--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -85,13 +85,13 @@
             <p>Ponemos el mundo a tu alcance</p>
             <form id="contact-form" action="enviar_correo.php" method="post">
                 <div class="form-group">
-                    <input type="text" class="form-control" name="nombre" placeholder="Nombre" required>
+                    <input type="text" class="form-control" name="nombre" placeholder="nombre" required>
                 </div>
                 <div class="form-group">
                     <input type="email" class="form-control" name="email" placeholder="Correo Electrónico" required>
                 </div>
                 <div class="form-group">
-                    <textarea class="form-control" name="mensaje" placeholder="Mensaje" rows="4" required></textarea>
+                    <textarea class="form-control" name="mensaje" placeholder="mensaje" rows="4" required></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">Enviar Correo</button>
             </form>
