--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -96,8 +96,9 @@
                 <input type="date" id="fechaRetiro" name="fechaRetiro" required><br><br>
                 <label for="emailContacto">Email de Contacto:</label>
                 <input type="email" id="emailContacto" name="emailContacto" required><br><br>
+                <button type="submit" class="btn btn-primary">Enviar Solicitud de Retiro</button>
             </fieldset>
-            <button type="submit">Enviar Solicitud de Retiro</button>
+            
         </form>
     </section>
     <section class="image-gallery">
