--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -69,9 +69,9 @@
                     <div class="form-group">
                         <label for="unidad">Unidad:</label>
                         <select class="form-control" id="unidad">
-                            <option value="unidad1">Unidad 1</option>
-                            <option value="unidad2">Unidad 2</option>
-                            <option value="unidad3">Unidad 3</option>
+                            <option value="unidad1">Chasis</option>
+                            <option value="unidad2">Semi</option>
+                            <option value="unidad3">Sider</option>
                         </select>
                     </div>
                     <button type="submit" class="btn btn-primary">Enviar</button>
