--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <a href="sobre-nosotros.html">Sobre nosotros</a>
         <a href="Trabaja-con-nosotros.html">Trabaja con nosotros</a>
       </nav>
-
+    
     <main>
-
+        <p id="mensaje">mensaje</p>
     <section id="formulario">
             <fieldset>
             <h2>Solicitar Retiro de Contenedores</h2>
-                <form>
+                <form id="formulario-retiro" method="post">
                     <label for="nombre-empresa">Nombre de la Empresa:</label>
                     <input type="text" id="nombre-empresa" name="nombre-empresa" required>
                     <label for="fecha-retiro">Fecha de Retiro:</label>
