--- a/Trabaja-con-nosotros.html
+++ b/Trabaja-con-nosotros.html
@@ -18,11 +18,10 @@
         </nav>
 
     <main>
-
-
         <section id="propuesta">
 <h1> Que te proponemos:</h1>
-<fieldset><h5>En MILO estamos comprometidos con el desarrollo personal y profesional de cada integrante de nuestra gran familia. <br>
+<fieldset>
+    <h5>En MILO estamos comprometidos con el desarrollo personal y profesional de cada integrante de nuestra gran familia. <br>
     Sí, porque eso somos: una gran familia. <br>
     Nos conocemos, crecemos juntos y seguimos construyendo día a día esta historia desde hace más de 50 años.</h5></fieldset>
 <img src="imagenes/imagen8.jpg" alt="">
